--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/StephenLover/pet-react-demo/issues"
   },
-  "homepage": "https://github.com/StephenLover/pet-react-demo#readme"
+  "homepage": "https://github.com/StephenLover/pet-react-demo#readme",
+  "devDependencies": {
+    "prettier": "^1.17.0"
+  }
 }
